<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookDetailActivity">

    <ScrollView
        android:id="@+id/activityBookDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/coverDetail"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@color/purple"
                android:contentDescription="@string/book_cover"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/ic_baseline_image_not_supported_120" />

            <TextView
                android:id="@+id/titleDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/raleway_semibold"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="35sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coverDetail" />

            <TextView
                android:id="@+id/authorDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/raleway_semibold"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/author"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleDetail" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/bookDetailLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/releasedSection"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/released_date_icon"
                        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

                    <TextView
                        android:id="@+id/releasedLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/released"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/dateDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:text="@string/_2021"
                        android:textAlignment="center"
                        android:textColor="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/genreSection"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/genre_icon"
                        app:srcCompat="@drawable/ic_baseline_category_24" />

                    <TextView
                        android:id="@+id/genreLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/genre"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/genreDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:maxWidth="30dp"
                        android:maxLines="3"
                        android:text="@string/humour"
                        android:textAlignment="center"
                        android:textColor="@color/gray_dark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/languageSection"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/globe_language_icon"
                        app:srcCompat="@drawable/ic_baseline_language_24" />

                    <TextView
                        android:id="@+id/languageLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_bold"
                        android:text="@string/language"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/languageDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/raleway_semibold"
                        android:text="@string/en"
                        android:textAlignment="center"
                        android:textColor="@color/gray_dark" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/addToBooksButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/raleway_semibold"
                android:padding="15dp"
                android:text="@string/add_to_books"
                />

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_semibold"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/description"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/descriptionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/raleway_medium"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="?android:attr/textColorTertiary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorDetail" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>